@@ -159,14 +159,14 @@ class Gravity_Flow_Common {
 	 * @since 1.7.1-dev
 	 *
 	 * @param int|string $date_or_timestamp The unix timestamp or string in the Y-m-d H:i:s format to be formatted.
-	 * @param string     $format            The format the date/time should be returned in. Default is d M Y g:i a.
+	 * @param string     $format            The format the date/time should be returned in. Defaults to an empty string; the date and time format from the WordPress general settings.
 	 * @param bool       $is_human          Indicates if the date/time should be returned in a human readable format such as "1 hour ago". Default is false.
 	 * @param bool       $include_time      Indicates if the time should be included in the returned string. Default is false.
 	 *
 	 * @return string
 	 */
-	public static function format_date( $date_or_timestamp, $format = 'd M Y g:i a', $is_human = false, $include_time = false ) {
-		$date_time = is_integer( $date_or_timestamp ) ? date( 'Y-m-d H:i:s', $date_or_timestamp ) : $date_or_timestamp;
+	public static function format_date( $date_or_timestamp, $format = '', $is_human = false, $include_time = false ) {
+		$date_time = is_numeric( $date_or_timestamp ) ? date( 'Y-m-d H:i:s', $date_or_timestamp ) : $date_or_timestamp;
 
 		return GFCommon::format_date( $date_time, $is_human, $format, $include_time );
 	}
