@@ -1,5 +1,6 @@
 - Added the gravityflow_step_expiration_timestamp filter.
 - Updated the processing of the workflow to trigger before the confirmation is processed.
+- Updated the timeline date/time format to reflect format selected in WordPress general settings.
 - Updated outgoing webhook response mapping to parse merge tags in field keys
 - Added the step merge tag attribute to allow merge tags to specify the step for which tokens must be generated. This allows feed add-ons to specify the step. For example, a Twilio or Slack message can contain a one-click approval link for the next step.
 - Updated the outgoing webhook step settings to display merge tag dropdown with the URL field.
